--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="mainPage/style/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section>
-        <a href="../inferno/index.html"><button class="glow-on-hover" type="button">INFERNO</button></a>
+        <a href="inferno/index.html"><button class="glow-on-hover" type="button">INFERNO</button></a>
         <a href="#Purgatory"><button class="glow-on-hover" type="button">PURGATORIO</button></a>
         <a href="#Heaven"><button class="glow-on-hover" type="button">PARADISO</button></a>
     
